<resources>
    <string name="app_name">৬৪ জেলার তথ্য</string>
    <string name="dhaka_button">ঢাকা</string>
    <string name="Khulna_button">খুলনা</string>
    <string name="Rajshahi_button">রাজশাহী</string>
    <string name="Chittagong_button">চট্টগ্রাম</string>
    <string name="Barishal_button">বরিশাল</string>
    <string name="Sylhet_button">সিলেট</string>
    <string name="Rongpur_button">রংপুর</string>
    <string name="Mymensingh_button">ময়মনসিং</string>
    <string name="Developer_button">About Me</string>
    <string name="share_title">Share the app</string>
    <string name="Gazipur_button">গাজীপুর</string>
    <string name="Faridpur_button">ফরিদপুর</string>
    <string name="Gopalganj_button">গোপালগঞ্জ</string>
    <string name="Kishoreganj_button">কিশোরগঞ্জ</string>
    <string name="Tangail_button">টাঙ্গাইল</string>
    <string name="Narshindi_button">নরসিংদী</string>
    <string name="Narayanganj_button">নারায়ণগঞ্জ</string>
    <string name="Madaripur_button">মাদারিপুর</string>
    <string name="Manikganj_button">মানিকগঞ্জ</string>
    <string name="Munshiganj_button">মুন্সিগঞ্জ</string>
    <string name="Rajbari_button">রাজবাড়ী</string>
    <string name="Shariyatpur_button">শরিয়তপুর</string>
    <string name="Bagerhat_button">বাগেরহাট</string>
    <string name="Kushtia_button">কুষ্টিয়া</string>
    <string name="Cuadanga_button">চুয়াডাঙ্গা</string>
    <string name="Jhinaida_button">ঝিনাইদহ</string>
    <string name="Norail_button">নড়াইল</string>
    <string name="Magura_button">মাগুরা</string>
    <string name="Meherpur_button">মেহেরপুর</string>
    <string name="Jessore_button">যশোর</string>
    <string name="Satkhira_button">সাতক্ষীরা</string>
    <string name="Capainababganj_button">চাঁপাইনবাবগঞ্জ</string>
    <string name="Joypurhat_button">জয়পুরহাট</string>
    <string name="Naoga_button">নওগাঁ</string>
    <string name="Natore_button">নাটোর</string>
    <string name="Pabna_button">পাবনা</string>
    <string name="Bogra_button">বগুড়া</string>
    <string name="Shirajganj_button">সিরাজগঞ্জ</string>
    <string name="Noakhali_button">নোয়াখালী</string>
    <string name="Coxsbazar_button">কক্সবাজার</string>
    <string name="Comilla_button">কুমিল্লা</string>
    <string name="Feni_button">ফেনী</string>
    <string name="Chadpur_button">চাঁদপুর</string>
    <string name="Brahmanbaria_button">ব্রাহ্মণবাড়ীয়া</string>
    <string name="Laxmipur_button">লক্ষ্মীপুর</string>
    <string name="Rangamaii_button">রাঙ্গামাটি</string>
    <string name="Khagrachari_button">খাগড়াছড়ি</string>
    <string name="Bandarban_button">বান্দরবান</string>
    <string name="Moulavibazar_button">মৌলভীবাজার</string>
    <string name="Sunamganj_button">সুনামগঞ্জ</string>
    <string name="Hobiganj_button">হবিগঞ্জ</string>
    <string name="Netrokona_button">নেত্রকোনা</string>
    <string name="jamalpur_button">জামালপুর</string>
    <string name="Sherpur_button">শেরপুর</string>
    <string name="Jhalokathi_button">ঝালকাঠি</string>
    <string name="Potuakhali_button">পটুয়াখালী</string>
    <string name="Pirajpr_button">পিরোজপুর</string>
    <string name="Barguna_button">বরগুনা</string>
    <string name="Bhola_button">ভোলা</string>
    <string name="kurigram_button">কুড়িগ্রাম</string>
    <string name="gaibandha_button">গাইবান্ধা</string>
    <string name="thakurgao_button">ঠাকুরগাঁও</string>
    <string name="dinajpur_button">দিনাজপুর</string>
    <string name="nilphamari_button">নীলফামারী</string>
    <string name="pancagar_button">পঞ্চগড়</string>
    <string name="rangpur_button">রংপুর</string>
    <string name="lalmonirhat_button">লালমনিরহাট</string>
    <string name="bagerhat_text">ইতিহাসঃ \nবাগেরহাটে প্রথম বসতি স্থাপন করে অনার্য শ্রেণীর মানুষ। এদের মধ্যে রয়েছে ভূমধ্য সাগরীয় অঞ্চল হতে আসা অস্ট্রিক ও দ্রাবিড় এবং মঙ্গোলীয় আলপাইন প্রভৃতি। এ অঞ্চলে অনার্য প্রভাবের বড় নিদর্শন হল পৌন্ড্রক্ষত্রিয় সম্প্রদায়। এ জেলার বিভিন্ন স্থানে বিশেষ করে রামপাল উপজেলায় এ সম্প্রদায়ের লোক বেশি বাস করে। পৌন্ড্র শব্দের অপভ্রংশ পুড়া বা পোদ। পৌন্ড্র শব্দটি দ্রাবিড় শব্দজাত যার অর্থ ইক্ষু। অনার্য শ্রেণীভূক্ত নমশূদ্র সম্প্রদায়ের মানুষ ও বাগেরহাটে প্রচুর বাস করে। এদের পূর্ব নাম চন্ডাল। এরা বরেন্দ্র অঞ্চল হতে এসে এখানে বসবাস শুরু করে। এ ছাড়া বাগেরহাটে এক শ্রেণীর মৎস্য শিকারী বা জেলে বসবাস করে যাদের আদি পুরুষ নিগ্রোবটু(নিগ্রয়েড) । এরা ভারত উপমহাদেশের আদিমতম অধিবাসী। খ্রীষ্টের জন্মের প্রায় আড়াই হাজার বছর আগে মধ্য এশিয়া হতে এ অঞ্চলে আর্য তথা আদি নর্কিভ বা ইন্ডিভদের আগমণ ঘটে। আর্য-অনার্যের শোণিত ধারাই এ অঞ্চলের অধিবাসীদের মধ্যে ।বস্ত্ত পূজারী অনার্যগণ কৌমধর্ম (টাইবাল ধর্ম) অনুসরণ করতো। শক্তি পূজারী আর্যরা নিয়ে আসে বৈদিক ধর্ম। সূর্য ও অগ্নি ছিল তাদের অন্যতম উপাস্য। আর্য ও অনার্য উভয় ধর্মের আচার অনুষ্ঠান রীতিনীতির মিশ্রণে প্রতিষ্ঠিত হয় হিন্দুধর্ম। বাগেরহাটের অতি প্রাচীন স্থান পানিঘাটে প্রাপ্ত কষ্টি পাথরের অষ্টাদশ ভূজা দেবীমূর্তি, মরগা খালের তীরে খানজাহান আলী (রঃ) এর পাথর ভর্তি জাহাজ ভিড়বার স্থান জাহাজঘাটায় মাটিতে গ্রোথিত পাথরে উৎকীর্ণ অষ্টাদশ ভূজা মহিষ মর্দিনী দেবীমূর্তি, চিতলমারী উপজেলাধীন খরমখালি গ্রামে প্রাপ্ত কৃষ্ণ প্রস্তরের বিষ্ণু মূর্তি ইত্যাদি নিদর্শন এখানে হিন্দু সভ্যতা বিকাশের পরিচয় বহন করে। ১৪৫০ খ্রিঃ খানজাহান আলী (রঃ) খাঞ্জেলী দীঘি খনন করান। এ সময় অনন্য সাধারণ ধ্যাণী বৌদ্ধমূর্তি পাওয়া যায়। ১৯৭১ সালে বৌদ্ধ পুরোহিত বিশুদ্ধানন্দ মহাথেরো পাল আমলে নির্মিত ঐ বৌদ্ধমূর্তিটি কমলাপুর বৌদ্ধ বিহারে সংস্থাপন করেন। এটা এ অঞ্চলে বৌদ্ধ প্রভাবের পরিচয় বহন করে।\n\nপ্রশাসনিক এলাকাঃ \nপৌরসভা ০৩ টি, গ্রামেরসংখ্যা ১,০৪৭ টি। বাগেরহাট জেলা মোট ৯ টি উপজেলায় বিভক্ত। এগুলো হলো:
        কচুয়া, চিতলমারী, ফকিরহাট, বাগেরহাট, সদর, মোংলা, মোড়েলগঞ্জ, মোল্লাহাট, রামপাল, শরণখোলা।\n\nঅবস্থান ও আয়তনঃ \nবাগেরহাট জেলার উত্তরে গোপালগঞ্জ ও নড়াইল জেলা, পশ্চিমে খুলনা জেলা, দক্ষিণে বঙ্গোপসাগর এবং পূর্বে পিরোজপুর ও বরগুনা জেলা। ২২৹ ৩২’ থেকে ২২৹ ৫৬’ উত্তর অক্ষাংশ এবং ৮৯৹ ৩২’ থেকে ৮৯৹ ৪৮’ পূর্ব দ্রাঘিমাংশের মধ্যে বাগেরহাট জেলার অবস্থান। এ জেলার আয়তন ৫৮৮২.১৮ বর্গকিলোমিটার; তারমধ্যে ১৮৩৪.৭৪ বর্গকিলোমিটার বনাঞ্চল, ৪০৫.৩ বর্গকিলোমিটার জলাশয় এবং অবশিষ্টাংশ নিম্ন-সমভূমি। বাগেরহাট জেলা সদরের অধিকাংশ ভৈরব নদীর পশ্চিম তীরে এবং শহরের বর্ধিত অংশ ভৈরবের দক্ষিণ প্রবাহ দড়াটানার পশ্চিম তীরে অবস্থিত।\n\nকৃতী ব্যক্তিত্বঃ \nপ্রফেসর অাব্দুল্লাহ অাবু সাইদ, বিশ্ব সাহিত্য কেন্দ্রের প্রতিষ্ঠাতা\nঅধ্যাপক ডঃ স্বরোচিষ সরকার, লেখক ও গবেষক\nদিব্যেন্দু দ্বীপ, লেখক ও সাংবাদিক।\n</string>
    <string name="khulna_text">ইতিহাসঃ\nহযরত পীর খাজা খানজাহান আলী (র.) স্মৃতি বিজড়িত ও ভৈরব-রূপসা বিধৌত খুলনার ইতিহাস-ঐতিহ্য গৌরব মন্ডিত। খুলনা নামকরণের উৎপত্তি নিয়ে মতভেদ রয়েছে। তবে সবচেয়ে বেশি আলোচিত মতগুলো হচ্ছে- ধনপতি সওদাগরের দ্বিতীয় স্ত্রী খুলনার নামে নির্মিত "খুলনেশ্বরী মন্দির" থেকে খুলনা নামের উৎপত্তি। ১৭৬৬ সালে ফলমাউথ জাহাজের নাবিকদের উদ্ধারকৃত রেকর্ডে লিখিত Culnea শব্দ থেকে খুলনা। অনেক বিজ্ঞজনের মতে "কিসমত খুলনা" মৌজা থেকে খুলনা নামের উৎপত্তি হয়েছে।  বৃটিশ আমলের মানচিত্রে লিখিত Jessore-Culna শব্দ থেকে খুলনা এসেছে বলেও অনেকের ধারণা। তবে কোনটি সত্য তা এখনও গবেষণার বিষয়।\nখুলনা পৌরসভার জন্ম বৃত্তান্তে আসতে গেলে দেখা যায় যে, খুলনা পৌর এলাকা অতীতে জসর (যশোর) জেলার মুরলী থানার অন্তর্গত ছিল। পরে রূপসা নদীর পূর্ব পাড়ে তালিমপুর, শ্রীরামপুর (রহিমনগর) এর কাছে সুন্দরবনের জঙ্গল কেটে নতুন থানা স্থাপন করা হয় এবং এর নাম দেয়া হয় নওবাদ (নয়াবাদ)। কারো মতে এ নতুন থানা ১৭৮১ খ্রিঃ আবার কারো মতে ১৮৩৬ খ্রিঃ সৃষ্টি হয়। ১৮৪২ সালে খুলনা মহকুমার জন্ম হয়। অবিভক্ত বাংলার প্রথম মহকুমা খুলনা। পরে তার পরিধি সম্প্রসারিত হয়ে বর্তমানের খুলনা ও বাগেরহাট জেলা দুটি নিয়ে ছিল খুলনা মহকুমা। ১৮৬৩ সালে বাগেরহাটে স্বতন্ত্র মহকুমার কার্যালয় স্থানান্তরিত হয়। এরপর ১৮৪৫ সালে সেখানে প্রথম দালান কোঠা ওঠে যা আজকে জেলা প্রশাসকের বাসভবন। খুলনার প্রথম প্রশাসক ছিলেন ডেপুটি মিঃ শোর এবং দ্বিতীয় মহকুমা হাকিম ছিলেন সাহিত্যিক বঙ্কিমচন্দ্র চট্টোপাধ্যায়। তিনি এই বাসভবনে বসে তার উপন্যাস "দুর্গেশ নন্দিনী" রচনা করেছিলেন। পরে ১৮৮২ সালের ২৫ এপ্রিলের সরকারি বিজ্ঞপ্তি অনুযায়ী খুলনা জেলার জন্ম হয় এবং তৎকালীন যশোর জেলার খুলনা ও বাগেরহাট মহকুমা দুটি এবং ২৪ পরগনা জেলার সাতক্ষীরা মহকুমা নিয়ে ঐ সালের ১ জুন থেকে এ নতুন জেলার কাজ শুরু হয়। প্রথম জেলা ম্যাজিস্ট্রেট ছিলেন মিঃ ডব্লুউ এন ক্লে তার নামানুসারে শহরের ক্লে রোড হয়েছে।\n\n
অবস্থান ও আয়তনঃ\nখুলনা জেলার উত্তরে যশোর ও নড়াইল জেলা; দক্ষিণে বঙ্গোপসাগর; পূর্বে বাগেরহাট জেলা এবং পশ্চিমে সাতক্ষীরা জেলা রয়েছে। এর আয়তন ৪৩৯৪.৪৫ কিমি²।\n\nপ্রশাসনিক এলাকাঃ\nখুলনা জেলার উপজেলাগুলি হল -কয়রা, ডুমুরিয়া, তেরখাদা ,দাকোপ, দিঘলিয়া, পাইকগাছা, ফুলতলা, পাইকগাছা, বটিয়াঘাটা, রূপসা।\n\nউল্লেখযোগ্য ব্যক্তিত্বঃ\nখান জাহান আলী (১৩৬৯ - ২৫ অক্টোবর ১৪৫৯) - ইসলাম ধর্ম প্রচারক ও বাগেরহাটের স্থানীয় শাসক; আচার্য প্রফুল্ল চন্দ্র রায় (২ আগস্ট ১৮৬১ - ১৬ জুন ১৯৪৪) - প্রখ্যাত বাঙালি রসায়নবিদ, বিজ্ঞানশিক্ষক, দার্শনিক, কবি; অতুল সেন (মৃত্যুঃ ৫ আগস্ট ১৯৩২) - ভারতীয় উপমহাদেশের ব্রিটিশ বিরোধী স্বাধীনতা আন্দোলনের একজন অন্যতম ব্যক্তিত্ব এবং অগ্নিযুগের শহীদ বিপ্লবী; আব্দুর রাজ্জাক (১৫ জুন ১৯৮২) - বাংলাদেশী ক্রিকেটার;ওমর সানী (৬ মে ১৯৬৯) - চলচ্চিত্র অভিনেতা; মৌসুমী (১১ নভেম্বর ১৯৭৩) - চলচ্চিত্র অভিনেত্রী;\n
    </string>
    <string name="gazipur_text">ইতিহাসঃ\nইতিহাস খ্যাত ভাওয়াল পরগণার গহীনবনাঞ্চল আর গৈরিক মৃত্তিকাকোষের টেকটিলায় দৃষ্টিনন্দন ঐতিহাসিক এ জনপদ ১৯৮৪ সালের ১ মার্চ গাজীপুর জেলা হিসেবে আত্মপ্রকাশ করে।\n\nভৌগোলিক সীমানাঃ\nগাজীপুর জেলার উত্তরে ময়মনসিংহ জেলা ও কিশোরগঞ্জ জেলা, দক্ষিণে ঢাকা জেলা ও নারায়ণগঞ্জ জেলা, পূর্বে কিশোরগঞ্জ জেলা ও নরসিংদী জেলা এবং পশ্চিমে ঢাকা জেলা ও টাঙ্গাইল জেলা অবস্থিত।\n\nপ্রশাসনিক এলাকাসমূহঃ\nগাজীপুর জেলায় ৫টি উপজেলা রয়েছে; এগুলি হলোঃ কালিয়াকৈর উপজেলা, কালীগঞ্জ উপজেলা, কাপাসিয়া উপজেলা, গাজীপুর সদর উপজেলা এবং শ্রীপুর উপজেলা।\n\nবিখ্যাত ব্যক্তিবর্গঃ\nতাজউদ্দীন আহমদ, বাংলাদেশের প্রথম প্রধানমন্ত্রী।\nআবু জাফর শামসুদ্দীন।\nএম জাহিদ হাসান - পদার্থবিদ, ভাইল ফার্মিয়ন কণার আবিষ্কারক।\nএম জাহিদ হাসান - পদার্থবিদ, ভাইল ফার্মিয়ন কণার আবিষ্কারক।\n
    </string>
    <string name="dhaka_text">ইতিহাসঃ\nবাংলাদেশের রাজধানী ঢাকা মোঘল-পূর্ব যুগে কিছু গুরুত্বধারণ করলেও শহরটি ইতিহাসে প্রসিদ্ধি লাভ করে মোঘল যুগে। ১৬১০ খ্রীষ্টাব্দে ইসলাম খান চিশতিসুবাহবাংলার রাজধানী রাজমহল থেকে ঢাকায় স্থানান্তর করেন এবং সম্রাটের নামানুসারে এর নামকরণ করেন জাহাঙ্গীরনগর। প্রশাসনিকভাবে জাহাঙ্গীরনগর নামকরণ হলেওসাধারণ মানুষের মুখে ঢাকা নামটিই থেকে যায়। নদীপথের পাশে অবস্থানের কারণে ঢাকা প্রাক-মোঘল যুগেই স্থানীয় বাণিজ্যের কেন্দ্র ছিল। এখানে উচ্চমান সম্পন্ন সূতিবস্ত্রউৎপাদিত হত যা মসলিন নামে পরিচিত। ইতিহাসের ধারাবাহিকতায় ১৯৫২, ১৯৬৬, ১৯৭০ সংগ্রামের ফসল হিসেবে ১৯৭১ সালের ১৬ ডিসেম্বর বাংলাদেশ স্বাধীন রাষ্ট্র হিসেবেআত্মপ্রকাশ করে এবং পরিচিতি লাভ করে। একটি স্বাধীন সার্বভৌম রাষ্ট্রের রাজধানী হিসেবে ঢাকা রাজনৈতিক,প্রশাসনিক কার্যকলাপ এবং অর্থনৈতিক, সামাজিক, শিক্ষা ও সাংস্কৃতিক কার্যক্রমের সর্বাধিক গুরুত্বপূর্ণ কেন্দ্ররূপে মর্যাদা লাভ করে।\nবৃহত্তর ঢাকা জেলা ১৯৮৪ সালের পূর্বে মানিকগঞ্জ, গাজীপুর, ঢাকা, নারায়নগঞ্জ, নরসিংদী ও মুন্সিগঞ্জ মহকুমা নিয়ে গঠিত বাংলাদেশের একটি প্রশাসনিক অঞ্চল ছিল। ১৯৮০ পরবর্তীসময়ে প্রশাসনিক সংস্কারের মাধ্যমে মহকুমা প্রথা বিলুপ্ত হয়। এতে মানিকগঞ্জ, গাজীপুর, নারায়নগঞ্জ, নরসিংদী ও মুন্সিগঞ্জ মহকুমা জেলায় পরিণত হয় এবং তৎকালীন ঢাকাজেলা বর্তমান রূপ লাভ করে।\n\nভৌগোলিক সীমানাঃ \nঢাকা জেলার মোট আয়তন ১৪৬৩.৬০ বর্গ কিঃ মিঃ। এই জেলার উত্তরে গাজীপুর জেলা ও টাঙ্গাইল জেলা, দক্ষিণে মুন্সিগঞ্জ জেলা ও রাজবাড়ী জেলা, পূর্বে নারায়ণগঞ্জ জেলা পশ্চিমে মানিকগঞ্জ জেলা এবং দক্ষিণ পশ্চিমে ফরিদপুর জেলা অবস্থিত।\n\nপ্রশাসনিক এলাকাঃ \nঢাকা জেলা ৬টি উপজেলা নিয়ে গঠিত; এগুলো হলোঃ কোতোয়ালি উপজেলা, ঢাকা, কেরানীগঞ্জ উপজেলা, দোহার উপজেলা, ধামরাই উপজেলা ,নবাবগঞ্জ উপজেলা এবং সাভার উপজেলা।\n\nবিখ্যাত অধিবাসীঃ\nমুহাম্মদ আজম শাহ : মুঘল সম্রাট;\nঅমর্ত্য সেন : নোবেল বিজয়ী অর্থনীতিবিদ;\nসত্যেন্দ্রনাথ বসু : বিজ্ঞানী, বোস-আইনেস্টাইন পরিসংখ্যানের পথ প্রদর্শক;\nশান্তিরঞ্জন সোম : ব্রিটিশবিরোধী বিপ্লবী;\nশায়েস্তা খান : মুঘল গভর্নর, বাংলা।\n
    </string>
</resources>