<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    android:padding="30dp"
    android:orientation="vertical"
    tools:context="com.example.mypc.bd64districtinfo.RajshahiActivity">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <Button
        android:id="@+id/chapainababganjId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Capainababganj_button"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:textStyle="bold"
        android:background="@drawable/rounded_button"
        android:layout_marginBottom="15dp" />
    <Button
        android:id="@+id/joypurhatId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Joypurhat_button"
       android:textColor="#ffffff"
        android:textSize="20sp"
        android:textStyle="bold"
        android:background="@drawable/rounded_button"
        android:layout_marginBottom="15dp"
        />
    <Button
    android:id="@+id/naogaId"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/Naoga_button"
   android:textColor="#ffffff"
    android:textSize="20sp"
    android:textStyle="bold"
    android:background="@drawable/rounded_button"
    android:layout_marginBottom="15dp" />
    <Button
    android:id="@+id/natoreId"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/Natore_button"
   android:textColor="#ffffff"
    android:textSize="20sp"
    android:textStyle="bold"
    android:background="@drawable/rounded_button"
    android:layout_marginBottom="15dp"
    /><Button
    android:id="@+id/pabnaId"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/Pabna_button"
   android:textColor="#ffffff"
    android:textSize="20sp"
    android:textStyle="bold"
    android:background="@drawable/rounded_button"
    android:layout_marginBottom="15dp"
    />
    <Button
    android:id="@+id/baguraId"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/Bogra_button"
   android:textColor="#ffffff"
    android:textSize="20sp"
    android:textStyle="bold"
    android:background="@drawable/rounded_button"
    android:layout_marginBottom="15dp" />
    <Button
    android:id="@+id/rajshahidstrdtId"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/Rajshahi_button"
   android:textColor="#ffffff"
    android:textSize="20sp"
    android:textStyle="bold"
    android:background="@drawable/rounded_button"
    android:layout_marginBottom="15dp" />
    <Button
        android:id="@+id/shirajganjId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Shirajganj_button"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:textStyle="bold"
        android:background="@drawable/rounded_button"
        android:layout_marginBottom="15dp" />

</LinearLayout>

</ScrollView>
