<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp"
    android:background="@drawable/background_gradient"
    tools:context="com.example.mypc.bd64districtinfo.MainActivity"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <Button
        android:id="@+id/dhakaId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dhaka_button"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="#ffffff"
        android:background="@drawable/main_button"
        android:layout_marginBottom="15dp"
     />

        <Button
            android:id="@+id/chittagongId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:background="@drawable/main_button"
            android:text="@string/Chittagong_button"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/khulnaId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:background="@drawable/main_button"
            android:text="@string/Khulna_button"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
        android:id="@+id/rajshahiId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Rajshahi_button"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="#ffffff"
        android:background="@drawable/main_button"
        android:layout_marginBottom="15dp"
     />

        <Button
            android:id="@+id/rongpurId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:background="@drawable/main_button"
            android:text="@string/Rongpur_button"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
        android:id="@+id/barishalId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Barishal_button"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="#ffffff"
        android:background="@drawable/main_button"
        android:layout_marginBottom="15dp"
     />

        <Button
        android:id="@+id/sylhetId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Sylhet_button"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="#ffffff"
        android:background="@drawable/main_button"
        android:layout_marginBottom="15dp"
     />

        <Button
        android:id="@+id/mymensinghId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Mymensingh_button"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="#ffffff"
        android:background="@drawable/main_button"
        android:layout_marginBottom="15dp"
     />
    <Button
        android:id="@+id/DeveloperId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Developer_button"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="#ffffff"
        android:background="@drawable/main_button"
        android:drawableLeft="@drawable/developer"
        android:layout_marginBottom="15dp"
     />

</LinearLayout>
</ScrollView>